MDEV-13209 Cross-database operation with virtual columns fails

if we don't need to print field's table name,
we surely don't need to print field's db name either