sql/item.cc
@@ -2669,22 +2669,21 @@ void Item_ident::print(String *str, enum_query_type query_type)
     use_db_name= !(cached_table && cached_table->belong_to_view &&
                    cached_table->belong_to_view->compact_view_format);
 
-  if (!use_db_name && use_table_name &&
-      (query_type & QT_ITEM_IDENT_SKIP_TABLE_NAMES))
+  if (use_table_name && (query_type & QT_ITEM_IDENT_SKIP_TABLE_NAMES))
   {
     /*
       Don't print the table name if it's the only table in the context
       XXX technically, that's a sufficient, but too strong condition
     */
     if (!context)
-      use_table_name= false;
+      use_db_name= use_table_name= false;
     else if (context->outer_context)
       use_table_name= true;
     else if (context->last_name_resolution_table == context->first_name_resolution_table)
-      use_table_name= false;
+      use_db_name= use_table_name= false;
     else if (!context->last_name_resolution_table &&
              !context->first_name_resolution_table->next_name_resolution_table)
-      use_table_name= false;
+      use_db_name= use_table_name= false;
   }
 
   if (!field_name || !field_name[0])
